--- a/ClotheOurKids.Web/Web.Release.config
+++ b/ClotheOurKids.Web/Web.Release.config
@@ -15,7 +15,12 @@
     </connectionStrings>
   -->
 
-  <connectionStrings configSource="ConnectionStrings_Release.config" xdt:Transform="Replace">
+  <!--<connectionStrings configSource="ConnectionStrings_Release.config" xdt:Transform="Replace">
+  </connectionStrings>-->
+
+  <connectionStrings xdt:Transform="Replace">
+    <add name="IdentityDbContext" connectionString="Data Source=mi3-wsq2.a2hosting.com;Initial Catalog=givekids_clothesDB; User Id=givekids_app; Password=tfdS$2tBp3^!3q" providerName="System.Data.SqlClient" />
+    <add name="ClotheOurKidsEntities" connectionString="metadata=res://*/DAL.ClotheOurKidsModel.csdl|res://*/DAL.ClotheOurKidsModel.ssdl|res://*/DAL.ClotheOurKidsModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=mi3-wsq2.a2hosting.com;initial catalog=givekids_clothesDB;user id=givekids_app;password=tfdS$2tBp3^!3q;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 
   <system.web>
