--- a/ClotheOurKids.Web/bin/ClotheOurKids.Web.dll.config
+++ b/ClotheOurKids.Web/bin/ClotheOurKids.Web.dll.config
@@ -23,10 +23,10 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
-    <!--<customErrors mode="On" redirectMode="ResponseRewrite">
+    <customErrors mode="On" redirectMode="ResponseRewrite">
       <error statusCode="404" redirect="~/CustomErrors/404.html"/>
       <error statusCode="503" redirect="~/CustomErrors/503.html"/>
-    </customErrors>-->
+    </customErrors>
   </system.web>
   <system.webServer>
     <modules>
