--- a/ClotheOurKids.Web/ClotheOurKids.Web.csproj
+++ b/ClotheOurKids.Web/ClotheOurKids.Web.csproj
@@ -291,6 +291,7 @@
     <Content Include="Content\img\toothbrush_blue.jpeg" />
     <Content Include="Content\js\jquery.animateNumber.min.js" />
     <Content Include="Content\js\jquery.waypoints.min.js" />
+    <Content Include="Content\js\vfs_fonts.js" />
     <Content Include="CustomErrors\404.html" />
     <Content Include="CustomErrors\503.html" />
     <Content Include="Changes.txt" />
