--- a/ClotheOurKids.Web/ClotheOurKids.Web.csproj
+++ b/ClotheOurKids.Web/ClotheOurKids.Web.csproj
@@ -284,6 +284,8 @@
     <Content Include="Content\img\logo\ClotheOurKidsLogo_withNA.png" />
     <Content Include="Content\img\logo\ClotheOurKidsLogo_withNAwhite_Scaled.png" />
     <Content Include="Content\img\logo\ClotheOurKidsLogo_withNA_Scaled.png" />
+    <Content Include="Content\img\logo\MainLogo_color_scaled.png" />
+    <Content Include="Content\img\logo\MainLogo_color_scaled_noTagLine.png" />
     <Content Include="Content\img\perry.jpg" />
     <Content Include="Content\img\social\FB-f-Logo__blue_57.png" />
     <Content Include="Content\img\social\Twitter_Logo_White_On_Blue.png" />
