--- a/ClotheOurKids.Web/Web.Release.config
+++ b/ClotheOurKids.Web/Web.Release.config
@@ -31,11 +31,11 @@
       <customErrors> section of your Web.config file.
       Note that because there is only one customErrors section under the
       <system.web> node, there is no need to use the "xdt:Locator" attribute.
-
-      <customErrors defaultRedirect="GenericError.htm"
-        mode="RemoteOnly" xdt:Transform="Replace">
-        <error statusCode="500" redirect="InternalError.htm"/>
-      </customErrors>
     -->
+      <customErrors mode="On" redirectMode="ResponseRewrite" xdt:Transform="Replace">
+        <error statusCode="404" redirect="~/CustomErrors/404.html"/>
+        <error statusCode="503" redirect="~/CustomErrors/503.html"/>
+      </customErrors>
+    
   </system.web>
 </configuration>
