--- a/ClotheOurKids.Web/Web.config
+++ b/ClotheOurKids.Web/Web.config
@@ -23,10 +23,7 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
-    <customErrors mode="On" redirectMode="ResponseRewrite">
-      <error statusCode="404" redirect="~/CustomErrors/404.html"/>
-      <error statusCode="503" redirect="~/CustomErrors/503.html"/>
-    </customErrors>
+    <customErrors mode="Off"/>
   </system.web>
   <system.webServer>
     <modules>
