--- a/ClotheOurKids.Web/packages.config
+++ b/ClotheOurKids.Web/packages.config
@@ -31,6 +31,7 @@
   <package id="Microsoft.Owin.Security.MicrosoftAccount" version="3.1.0" targetFramework="net452" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.1.0" targetFramework="net452" />
   <package id="Microsoft.Owin.Security.Twitter" version="3.1.0" targetFramework="net452" />
+  <package id="Microsoft.VisualStudio.SlowCheetah" version="3.0.61" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.8.3" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net452" />
