Changes to Registration Form
Changes to Registration Form

--- a/ClotheOurKids.Model/App.Config
+++ b/ClotheOurKids.Model/App.Config
@@ -2,6 +2,6 @@
 <configuration>
   <connectionStrings>
     <add name="ClotheOurKidsContext" connectionString="metadata=res://*/DAL.ClotheOurKidsModel.csdl|res://*/DAL.ClotheOurKidsModel.ssdl|res://*/DAL.ClotheOurKidsModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-6VL0k01\DEVSQLEXPRESS;initial catalog=ClotheOurKids;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="ClotheOurKidsEntities" connectionString="metadata=res://*/DAL.ClotheOurKidsModel.csdl|res://*/DAL.ClotheOurKidsModel.ssdl|res://*/DAL.ClotheOurKidsModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-6VL0k01\DEVSQLEXPRESS;initial catalog=ClotheOurKids;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ClotheOurKidsEntities" connectionString="metadata=res://*/DAL.ClotheOurKidsModel.csdl|res://*/DAL.ClotheOurKidsModel.ssdl|res://*/DAL.ClotheOurKidsModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ITL-ATA05;initial catalog=dbVelocity_ITL;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
