Layout Login and Registration Pages
Layout Login and Registration Pages

--- a/ClotheOurKids.Model/ClotheOurKids.Model.csproj
+++ b/ClotheOurKids.Model/ClotheOurKids.Model.csproj
@@ -166,6 +166,7 @@
     <Compile Include="Repository\RegisterFormRepository.cs" />
     <Compile Include="Repository\RequestFormRepository.cs" />
     <Compile Include="Repository\WhoWeServeRepository.cs" />
+    <Compile Include="ViewModel\RegisterViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.Config" />
