--- a/ClotheOurKids.Web/ClotheOurKids.Web.csproj
+++ b/ClotheOurKids.Web/ClotheOurKids.Web.csproj
@@ -254,8 +254,10 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\css\AdminLayout.css" />
     <Content Include="Content\css\foundation-emails.css" />
     <Content Include="Content\css\kidsSkin.css" />
+    <Content Include="Content\css\select2Custom.css" />
     <Content Include="Content\img\ClotheOurKids\Brandi_scaled.jpg" />
     <Content Include="Content\img\ClotheOurKids\COKJULY-1.jpg" />
     <Content Include="Content\img\ClotheOurKids\COKJULY-10.jpg" />
@@ -295,6 +297,7 @@
     <Content Include="Content\img\social\Twitter_Logo_White_On_Blue.png" />
     <Content Include="Content\img\social\Twitter_Logo_White_On_Blue.svg" />
     <Content Include="Content\img\toothbrush_blue.jpeg" />
+    <Content Include="Content\js\dataTables_bootstrap_pagination.js" />
     <Content Include="Content\js\jquery-3.2.1.min.js" />
     <Content Include="Content\js\jquery.animateNumber.min.js" />
     <Content Include="Content\js\jquery.waypoints.min.js" />
@@ -584,79 +587,12 @@
     <Content Include="Content\js\modernizr-3.5.js" />
     <Content Include="ConnectionStrings.config" />
     <Content Include="ConnectionStrings _Release.config" />
-    <Content Include="Content\sass\mdb.scss" />
-    <Content Include="Content\sass\_custom.scss" />
-    <Content Include="Content\sass\core\bootstrap\_functions.scss" />
-    <Content Include="Content\sass\core\bootstrap\_variables.scss" />
-    <Content Include="Content\sass\core\_colors.scss" />
-    <Content Include="Content\sass\core\_global.scss" />
-    <Content Include="Content\sass\core\_helpers.scss" />
-    <Content Include="Content\sass\core\_masks.scss" />
-    <Content Include="Content\sass\core\_mixins.scss" />
-    <Content Include="Content\sass\core\_typography.scss" />
-    <Content Include="Content\sass\core\_variables.scss" />
-    <Content Include="Content\sass\core\_waves.scss" />
-    <Content Include="Content\sass\free\_animations-basic.scss" />
-    <Content Include="Content\sass\free\_animations-extended.scss" />
-    <Content Include="Content\sass\free\_badges.scss" />
-    <Content Include="Content\sass\free\_buttons.scss" />
-    <Content Include="Content\sass\free\_cards.scss" />
-    <Content Include="Content\sass\free\_carousels.scss" />
-    <Content Include="Content\sass\free\_dropdowns.scss" />
-    <Content Include="Content\sass\free\_footers.scss" />
-    <Content Include="Content\sass\free\_forms.scss" />
-    <Content Include="Content\sass\free\_input-group.scss" />
-    <Content Include="Content\sass\free\_list-group.scss" />
-    <Content Include="Content\sass\free\_modals.scss" />
-    <Content Include="Content\sass\free\_msc.scss" />
-    <Content Include="Content\sass\free\_navbars.scss" />
-    <Content Include="Content\sass\free\_pagination.scss" />
-    <Content Include="Content\sass\free\_tables.scss" />
-    <Content Include="Content\sass\pro\picker\_default-date.scss" />
-    <Content Include="Content\sass\pro\picker\_default-time.scss" />
-    <Content Include="Content\sass\pro\picker\_default.scss" />
-    <Content Include="Content\sass\pro\sections\_blog.scss" />
-    <Content Include="Content\sass\pro\sections\_contacts.scss" />
-    <Content Include="Content\sass\pro\sections\_magazine.scss" />
-    <Content Include="Content\sass\pro\sections\_pricing.scss" />
-    <Content Include="Content\sass\pro\sections\_projects.scss" />
-    <Content Include="Content\sass\pro\sections\_social.scss" />
-    <Content Include="Content\sass\pro\sections\_team.scss" />
-    <Content Include="Content\sass\pro\sections\_templates.scss" />
-    <Content Include="Content\sass\pro\sections\_testimonials.scss" />
-    <Content Include="Content\sass\pro\_accordion.scss" />
-    <Content Include="Content\sass\pro\_animations.scss" />
-    <Content Include="Content\sass\pro\_autocomplete.scss" />
-    <Content Include="Content\sass\pro\_blog.scss" />
-    <Content Include="Content\sass\pro\_buttons.scss" />
-    <Content Include="Content\sass\pro\_cards.scss" />
-    <Content Include="Content\sass\pro\_carousels.scss" />
-    <Content Include="Content\sass\pro\_charts.scss" />
-    <Content Include="Content\sass\pro\_checkbox.scss" />
-    <Content Include="Content\sass\pro\_chips.scss" />
-    <Content Include="Content\sass\pro\_dropdowns.scss" />
-    <Content Include="Content\sass\pro\_ecommerce.scss" />
-    <Content Include="Content\sass\pro\_file-input.scss" />
-    <Content Include="Content\sass\pro\_forms.scss" />
-    <Content Include="Content\sass\pro\_input-group.scss" />
-    <Content Include="Content\sass\pro\_lightbox.scss" />
-    <Content Include="Content\sass\pro\_material-select.scss" />
-    <Content Include="Content\sass\pro\_msc.scss" />
-    <Content Include="Content\sass\pro\_navbars.scss" />
-    <Content Include="Content\sass\pro\_parallax.scss" />
-    <Content Include="Content\sass\pro\_progress.scss" />
-    <Content Include="Content\sass\pro\_radio.scss" />
-    <Content Include="Content\sass\pro\_range.scss" />
-    <Content Include="Content\sass\pro\_scrollbar.scss" />
-    <Content Include="Content\sass\pro\_scrollspy.scss" />
-    <Content Include="Content\sass\pro\_sidenav.scss" />
-    <Content Include="Content\sass\pro\_skins.scss" />
-    <Content Include="Content\sass\pro\_social-buttons.scss" />
-    <Content Include="Content\sass\pro\_steppers.scss" />
-    <Content Include="Content\sass\pro\_switch.scss" />
-    <Content Include="Content\sass\pro\_tabs.scss" />
-    <Content Include="Content\sass\pro\_toasts.scss" />
-    <Content Include="Content\sass\pro\_variables.scss" />
+    <Content Include="Content\scss\mdb.scss" />
+    <Content Include="Content\scss\style.scss" />
+    <Content Include="Content\scss\_custom-skin.scss" />
+    <Content Include="Content\scss\_custom-styles.scss" />
+    <Content Include="Content\scss\_custom-variables.scss" />
+    <Content Include="Content\scss\_custom.scss" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Content\js\jquery.validate-vsdoc.js" />
